--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">vikash<span>Codes</span></a></div>
+            <div class="logo"><a href="#">vikash<span>kumar</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
@@ -256,7 +256,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>&copy;vikash Codes </span>
+        <span>&copy;vikash kumar </span>
     </footer>
 
     <script src="script.js"></script>
