--- a/index.html
+++ b/index.html
@@ -202,8 +202,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos harum corporis fuga
-                        corrupti. Doloribus quis soluta nesciunt veritatis vitae nobis?</p>
+                    <p>I am an experienced frontend developer skilled in HTML, CSS, JavaScript, and popular frameworks like React and Vue. I specialize in creating responsive and user-friendly web interfaces that deliver excellent user experiences across devices.</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
@@ -223,7 +222,7 @@
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">bantishk@123@gmail.com</div>
+                                <div class="sub-title">bantishk@123@Loremgmail.com</div>
                             </div>
                         </div>
                     </div>
