--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>CSS</span>
+                            <span>CSS,tailwind,bootstrap,</span>
                             <span>75%</span>
                         </div>
                         <div class="line css"></div>
@@ -158,7 +158,13 @@
                         </div>
                         <div class="line react"></div>
                     </div>
-                    
+                    <div class="bars">
+                        <div class="info">
+                            <span>React.Js</span>
+                            <span>85%</span>
+                        </div>
+                        <div class="line react"></div>
+                    </div>
                     </div>
                 </div>
             </div>
@@ -222,7 +228,7 @@
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">bantishk@123@Loremgmail.com</div>
+                                <div class="sub-title">bantishk123@gmail.com</div>
                             </div>
                         </div>
                     </div>
