--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">vikash</div>
+                                <div class="sub-title">vikash kumar</div>
                             </div>
                         </div>
                         <div class="row">
