--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
                     <p>A strong front-end developer resume summary for a fresher highlights passion, key technical skills like HTML, CSS, JavaScript,nad React js relevant projects from education or self-study, and a career aspiration to learn and contribute to a dynamic team. It should focus on user experience, responsive design, and include any quantifiable results from projects to demonstrate impact and potential</p>
                     <a href="#contact">Contact Me</a>
                    <a href="resume.pdf">Download CV</a>
-                    <a href="https://joyful-subhma.netlify.app">Live project</a>
+                    <a href="https://joyful-subhma.netlify.app">project1</a>
+                    <a href="https://banti-kumar9128.github.io/react/">project2</a>
+                    <a href="https://vikash-comerce-app.netlify.app/">project3</a>
                 </div>
             </div>
         </div>
