Update portfolio: fix typos, update dependencies, enhance README

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <a href="#contact">Contact Me</a>
                    <a href="resume.pdf">Download CV</a>
                     <a href="https://joyful-subhma.netlify.app">project1</a>
-                    <a href="https://banti-kumar9128.github.io/react/">project2</a>
+                    <a href="https://banti-kumar9128.github.io/ham/">project2</a>
                     <a href="https://vikash-comerce-app.netlify.app/">project3</a>
                 </div>
             </div>
